[package]
name = "async-broadcast"
version = "0.7.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/smol-rs/async-broadcast"
documentation = "https://docs.rs/async-broadcast"
description = "Async broadcast channels"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Stjepan Glavina <stjepang@gmail.com>",
    "Yoshua Wuyts <yoshuawuyts@gmail.com>",
    "Zeeshan Ali Khan <zeeshanak@gnome.org>",
]

[[bench]]
harness = false
name = "broadcast_bench"

[features]
default = ["std"]
std = ["event-listener/std", "event-listener-strategy/std"]


[dependencies]
event-listener = { version = "5.0.0", default-features = false }
event-listener-strategy = { version = "0.5.0", default-features = false }
futures-core = { version = "0.3.21", default-features = false }
pin-project-lite = "0.2.13"
spin = { version = "0.9.8" }

[dev-dependencies]
criterion = "0.3.5"
doc-comment = "0.3.3"
easy-parallel = "3.2.0"
futures-lite = "1.11.3"
futures-util = "0.3.21"
